fix: avoid duplicate week entries in portfolio graph